--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+        main {
+            java.srcDirs = ['src/main/kotlin']
+        }
+
+        androidTest {
+            java.srcDirs = ['src/androidTest/kotlin']
+        }
+
+        test {
+            java.srcDirs = ['src/test/kotlin']
+        }
+    }
 }
 
 buildscript {
