--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.onmycrowd.recharge"
+        applicationId "com.onmycrowd.topup"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
